--- a/index.html
+++ b/index.html
@@ -2,193 +2,205 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tour Support System - Login</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tour Support System – Secure Access</title>
 
-    <!-- Bootstrap 5.3 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap 5.3 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    <!-- Font Awesome Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 
     <!-- Favicon -->
     <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎓</text></svg>">
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎓</text></svg>" />
 </head>
 
 <body class="auth-page">
-    <div class="container">
+
+    <main class="container">
         <div class="row justify-content-center align-items-center min-vh-100">
             <div class="col-md-6 col-lg-5">
-                <!-- College Header -->
-                <div class="text-center mb-5">
-                    <div class="college-logo mb-3">
+
+                <!-- Header -->
+                <header class="text-center mb-5">
+                    <div class="mb-3">
                         <i class="fas fa-university fa-3x text-primary"></i>
                     </div>
                     <h1 class="h2 fw-bold text-primary">Tour Support System</h1>
-                    <p class="text-muted">
-                        Kamani Science & Prataprai Arts College, Amreli<br>
-                        <small>BCA 6th Semester Tour 2025 - 2026</small>
+                    <p class="text-muted mb-0">
+                        Kamani Science & Prataprai Arts College, Amreli
                     </p>
-                </div>
+                    <small class="text-muted">BCA 6th Semester Tour · 2025–2026</small>
+                </header>
 
-                <!-- Authentication Card -->
-                <div class="card shadow-lg border-0">
+                <!-- Login Card -->
+                <section class="card shadow-lg border-0">
                     <div class="card-body p-4">
-                        <h2 class="card-title text-center mb-4">Secure Access</h2>
+
+                        <h2 class="h5 text-center mb-4">Secure Access</h2>
 
                         <!-- Role Selection -->
-                        <div class="role-selection mb-4">
-                            <div class="btn-group w-100" role="group">
-                                <input type="radio" class="btn-check" name="role" id="faculty" value="faculty" checked>
+                        <div class="mb-4">
+                            <div class="btn-group w-100" role="group" aria-label="Role Selection">
+
+                                <input type="radio" class="btn-check" name="role" id="faculty" value="faculty"
+                                    checked />
                                 <label class="btn btn-outline-primary" for="faculty">
                                     <i class="fas fa-user-tie me-2"></i>Faculty
                                 </label>
 
-                                <input type="radio" class="btn-check" name="role" id="leader" value="leader">
+                                <input type="radio" class="btn-check" name="role" id="leader" value="leader" />
                                 <label class="btn btn-outline-primary" for="leader">
                                     <i class="fas fa-user-graduate me-2"></i>Student Leader
                                 </label>
 
-                                <input type="radio" class="btn-check" name="role" id="viewer" value="viewer">
+                                <input type="radio" class="btn-check" name="role" id="viewer" value="viewer" />
                                 <label class="btn btn-outline-primary" for="viewer">
                                     <i class="fas fa-eye me-2"></i>View Only
                                 </label>
+
                             </div>
                         </div>
 
-                        <!-- PIN Input -->
+                        <!-- PIN -->
                         <div class="mb-4">
                             <label for="pin" class="form-label">
-                                <i class="fas fa-lock me-2"></i>Enter PIN
+                                <i class="fas fa-lock me-2"></i>Access PIN
                             </label>
+
                             <div class="input-group">
-                                <input type="password" class="form-control form-control-lg" id="pin"
-                                    placeholder="Enter access PIN" maxlength="6" autocomplete="off">
-                                <button class="btn btn-outline-secondary" type="button" id="togglePin">
+                                <input type="password" id="pin" class="form-control form-control-lg"
+                                    placeholder="Enter 6-digit PIN" maxlength="6" inputmode="numeric"
+                                    autocomplete="off" />
+                                <button class="btn btn-outline-secondary" type="button" id="togglePin"
+                                    aria-label="Toggle PIN visibility">
                                     <i class="fas fa-eye"></i>
                                 </button>
                             </div>
+
                             <div class="form-text">
-                                <small>
-                                    <i class="fas fa-info-circle me-1"></i>
-                                    Faculty: 112233 | Leader: 123456 | Viewer: 000000
-                                </small>
+                                Faculty: <strong>112233</strong> · Leader: <strong>123456</strong> · Viewer:
+                                <strong>000000</strong>
                             </div>
                         </div>
 
-                        <!-- Login Button -->
-                        <button class="btn btn-primary btn-lg w-100 mb-3" id="loginBtn">
+                        <!-- Login -->
+                        <button id="loginBtn" class="btn btn-primary btn-lg w-100 mb-3">
                             <i class="fas fa-sign-in-alt me-2"></i>Access System
                         </button>
 
-                        <!-- Emergency Bypass -->
+                        <!-- Emergency -->
                         <div class="text-center">
-                            <button class="btn btn-link btn-sm" id="emergencyAccess" data-bs-toggle="modal"
-                                data-bs-target="#emergencyModal">
+                            <button class="btn btn-link btn-sm" data-bs-toggle="modal" data-bs-target="#emergencyModal">
                                 <i class="fas fa-ambulance me-1"></i>Emergency Read-Only Access
                             </button>
                         </div>
 
-                        <!-- Tour Info -->
+                        <!-- Tour Meta -->
                         <div class="mt-4 pt-3 border-top">
-                            <div class="row">
+                            <div class="row small text-muted">
                                 <div class="col-6">
-                                    <small class="text-muted">
-                                        <i class="fas fa-calendar me-1"></i>
-                                        Mar 10-15, 2024
-                                    </small>
+                                    <i class="fas fa-calendar me-1"></i>Mar 10–15, 2025
                                 </div>
                                 <div class="col-6 text-end">
-                                    <small class="text-muted">
-                                        <i class="fas fa-map-marker-alt me-1"></i>
-                                        Gujarat Tour
-                                    </small>
+                                    <i class="fas fa-map-marker-alt me-1"></i>Gujarat Tour
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <!-- Security Notice -->
+                    </div>
+                </section>
+
+                <!-- Notice -->
                 <div class="alert alert-warning alert-dismissible fade show mt-3" role="alert">
                     <i class="fas fa-shield-alt me-2"></i>
-                    <strong>Security Notice:</strong> This system is for authorized personnel only. All access is
-                    logged.
+                    Authorized academic use only. Data is stored locally.
                     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                 </div>
 
-                <!-- Technical Info -->
-                <div class="text-center mt-3">
+                <!-- Footer Info -->
+                <footer class="text-center mt-3">
                     <small class="text-muted">
-                        <i class="fas fa-mobile-alt me-1"></i>
-                        Optimized for mobile field use •
-                        <i class="fas fa-wifi-slash me-1"></i>
-                        Works offline •
-                        <i class="fas fa-database me-1"></i>
-                        Local storage only
+                        <i class="fas fa-mobile-alt me-1"></i>Mobile-optimized ·
+                        <i class="fas fa-wifi-slash me-1"></i>Offline-ready ·
+                        <i class="fas fa-database me-1"></i>No server storage
                     </small>
-                </div>
+                </footer>
+
             </div>
         </div>
-    </div>
+    </main>
 
-    <!-- Emergency Access Modal -->
-    <div class="modal fade" id="emergencyModal" tabindex="-1">
+    <!-- Emergency Modal -->
+    <div class="modal fade" id="emergencyModal" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
+
                 <div class="modal-header bg-warning">
                     <h5 class="modal-title">
-                        <i class="fas fa-exclamation-triangle me-2"></i>
-                        Emergency Read-Only Access
+                        <i class="fas fa-exclamation-triangle me-2"></i>Emergency Access
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
+
                 <div class="modal-body">
-                    <p class="alert alert-danger">
-                        <i class="fas fa-ambulance me-2"></i>
-                        <strong>Use only in emergencies!</strong> This provides limited access to safety information.
-                    </p>
-                    <p>You will have access to:</p>
-                    <ul>
-                        <li><i class="fas fa-check text-success me-2"></i>Emergency contacts</li>
-                        <li><i class="fas fa-check text-success me-2"></i>Safety guidelines</li>
-                        <li><i class="fas fa-check text-success me-2"></i>Tour itinerary</li>
-                        <li><i class="fas fa-times text-danger me-2"></i>No student details</li>
-                        <li><i class="fas fa-times text-danger me-2"></i>No attendance editing</li>
+                    <div class="alert alert-danger">
+                        <strong>Use only in emergency situations.</strong>
+                    </div>
+
+                    <ul class="mb-0">
+                        <li>Emergency contacts</li>
+                        <li>Safety instructions</li>
+                        <li>Tour itinerary</li>
+                        <li class="text-danger">No student data access</li>
+                        <li class="text-danger">No editing rights</li>
                     </ul>
                 </div>
+
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-warning" id="emergencyAccessBtn">
-                        <i class="fas fa-first-aid me-2"></i>Proceed to Safety Info
+                    <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button class="btn btn-warning" id="emergencyAccessBtn">
+                        Proceed
                     </button>
                 </div>
+
             </div>
         </div>
     </div>
 
-    <!-- JavaScript Files -->
+    <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/auth.js"></script>
 
-    <!-- Initialize authentication -->
+    <!-- Session Auto-Redirect -->
     <script>
-        // Check if this is a return visit (has active session)
-        if (localStorage.getItem('tourSystem_session')) {
-            const session = JSON.parse(localStorage.getItem('tourSystem_session'));
-            const now = new Date().getTime();
+        (function () {
+            const raw = localStorage.getItem('tourSystem_session');
+            if (!raw) return;
 
-            // Session valid for 8 hours
-            if (session.timestamp && (now - session.timestamp) < (8 * 60 * 60 * 1000)) {
-                window.location.href = 'dashboard.html';
+            try {
+                const session = JSON.parse(raw);
+                const valid =
+                    session?.user?.role &&
+                    session?.timestamp &&
+                    Date.now() - session.timestamp < 8 * 60 * 60 * 1000;
+
+                if (valid) {
+                    window.location.replace('dashboard.html');
+                } else {
+                    localStorage.removeItem('tourSystem_session');
+                }
+            } catch {
+                localStorage.removeItem('tourSystem_session');
             }
-        }
+        })();
     </script>
+
 </body>
 
 </html>
